Criando a terceira linha de codigo

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     
     <h1>Primeira Linha de codigo</h1>
     <h1>Segunda linha de codigo</h1>
+    <h1>Terceira linha de codigo</h1>
 </body>
 </html>
